--- a/portfolio1/styles.css
+++ b/portfolio1/styles.css
@@ -40,12 +40,12 @@
 .logo-text h1 {
     font-size: 18px;
     line-height: 1.2;
-    color: #f6f1f1;
+    color: #f6b956;
     margin: 0;
 }
 
 .logo-text span {
-    font-size: 12px;
+    font-size: 10px;
     color: #979393;
     display: block;
 }
@@ -188,16 +188,24 @@ body {
 
 .profile-name {
     font-size: 3.5rem;
-    margin: 0 0 20px 0;
+    margin-top: 100px;
+    margin-bottom: 5px;
     font-weight: 800;
     color: #fff;
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
 }
-
+.span-text{
+    font-size: 1.5rem;
+    font-weight: 800;
+    font-style: italic;
+    color: #c2c2c2;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+    text-decoration: underline;
+}
 .profile-bio {
     font-size: 1.1rem;
     line-height: 1.6;
-    color: #e6e6e6;
+    color: #a8a8a8;
     margin-bottom: 40px;
     max-width: 600px;
 }
